mega-full-fix-log.txt
=== MEGA FULL FIX IMPORT START ===
Current folder: /c/Users/USER/sols-rng-twitch
✅ Patch folder: /c/Users/USER/Downloads/sols-rng-mega-full-fix
✅ Project folder valid.

▶ cp /c/Users/USER/Downloads/sols-rng-mega-full-fix/PATCH_MEGA_FULL_FIX.js ./PATCH_MEGA_FULL_FIX.js

▶ node PATCH_MEGA_FULL_FIX.js
C:\Users\USER\sols-rng-twitch\PATCH_MEGA_FULL_FIX.js:241
  keys.add(`social:recent:${channelId}`);
            ^^^^^^

SyntaxError: Unexpected identifier 'social'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.15.0
❌ Command failed with code 1
Check mega-full-fix-log.txt
